k8s/game-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
        - name: game-service
          image: spmani99/game-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  type: ClusterIP
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
